# Mortgage-admin

./: .gitignore  README.md  pyproject.toml
mortgage_admin/: admin.py  data_process.py  ocr.py
